...
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:layout_marginBottom="24dp"
            android:fontFamily="cursive" />

        <!-- Кнопка "Начать" -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/newGameButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="🎮 Начать"
            android:textSize="18sp"
...
